Pull updates from theme and change homepage email link to contact page.

--- a/src/config.toml
+++ b/src/config.toml
@@ -92,7 +92,7 @@ pygmentscodefencesguesssyntax = true
     name = "Email"
     icon = "fas fa-envelope"
     weight = 4
-    url = "mailto:michael@chayev.com"
+    url = "contact/"
 
 
 [languages]
