--- a/src/config.toml
+++ b/src/config.toml
@@ -10,16 +10,10 @@ languagecode = "en"
 defaultcontentlanguage = "en"
 
 paginate = 20
-canonifyurls = true
 
 pygmentsstyle = "b2"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
-
-[markup]
-	[markup.goldmark]
-		[markup.goldmark.renderer]
-			unsafe = true
 
 # disqusShortname = "yourdiscussshortname"
 
@@ -40,7 +34,7 @@ pygmentscodefencesguesssyntax = true
     hideCredits = true
     hideCopyright = false
     since = 2020
-
+    
     rtl = false
 
     # Specify light/dark colorscheme
@@ -48,7 +42,10 @@ pygmentscodefencesguesssyntax = true
     # "auto" (use preference set by browser)
     # "dark" (dark background, light foreground)
     # "light" (light background, dark foreground) (default)
-    colorscheme = "auto"
+    colorScheme = "auto"
+
+    # Hide the toggle button, along with the associated vertical divider
+    hideColorSchemeToggle = false
 
     # Series see also post count
     maxSeeAlsoItems = 5
@@ -57,10 +54,13 @@ pygmentscodefencesguesssyntax = true
     enableTwemoji = true
 
     # Custom CSS
-    custom_css = ["css/custom.css"]
+    customCSS = ["css/custom.css"]
+
+    # Custom SCSS
+    customSCSS = []
 
     # Custom JS
-    custom_js = []
+    customJS = []
 
 # If you want to use fathom(https://usefathom.com) for analytics, add this section
 # [params.fathomAnalytics]
@@ -73,14 +73,14 @@ pygmentscodefencesguesssyntax = true
   series = "series"
   tag = "tags"
 
-[[params.social]]
+[[params.social]]    
     name = "Github"
-    icon = "fab fa-github"
+    icon = "fa fa-github"
     weight = 1
     url = "https://github.com/chayev"
 [[params.social]]
     name = "LinkedIn"
-    icon = "fab fa-linkedin"
+    icon = "fa fa-linkedin"
     weight = 2
     url = "https://www.linkedin.com/in/chayev/"
 # [[params.social]]
@@ -90,7 +90,7 @@ pygmentscodefencesguesssyntax = true
 #     url = "https://twitter.com/chayev_talks"
 [[params.social]]
     name = "Email"
-    icon = "fas fa-envelope"
+    icon = "fa fa-envelope"
     weight = 4
     url = "contact/"
 
