--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/themes/hugo-coder"]
 	path = src/themes/hugo-coder
-	url = https://github.com/luizdepra/hugo-coder.git
+	url = https://github.com/chayev/hugo-coder.git
