--- a/src/staging-config.toml
+++ b/src/staging-config.toml
@@ -1,1 +1,4 @@
 baseurl = "https://www.staging.chayev.com/"
+
+assetLinksPackageName = "com.appsflyer.onelink.appsflyeronelinkbasicapp"
+assetLinksFingerprint = "DC:65:43:67:F3:BD:02:52:AC:B4:50:F1:74:54:23:49:4D:49:6C:E6:DF:56:BD:CB:53:06:11:5B:C9:4E:5D:0C"
