--- a/src/staging-config.toml
+++ b/src/staging-config.toml
@@ -5,3 +5,4 @@ assetLinksFingerprint = "DC:65:43:67:F3:BD:02:52:AC:B4:50:F1:74:54:23:49:4D:49:6
 
 aasaPrefix = "6UQAD4B3U2"
 aasaBundle = "com.AppsFlyer.KamperDemo"
+aasaVersion = "v1"
