--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,35 +3,36 @@ version: 2.1
 workflows:
   main:
     jobs:
-      - build
+      - build:
+          context: main
       - deploy:
           requires:
             - build
 jobs:
   build:
     docker:
-      - image: hubci/gotham:0.10
+      - image: hubci/strawberry:0.21.0
     steps:
       - checkout
       - run: git submodule update --init --recursive
       - run:
-          name: "Build Website With Gotham"
+          name: "Build Website With Strawberry"
           command: |
             if [[ $CIRCLE_BRANCH == "master" ]]; then
-              HUGO_ENV=production gotham -v -s src/
+              HUGO_ENV=production strawberry -v -s src/
             else
-              HUGO_ENV=staging gotham -v -s src/ --config config.toml,staging-config.toml
+              HUGO_ENV=staging strawberry -v -s src/ --config config.toml,staging-config.toml
             fi
-      - run:
-          name: "Test Website"
-          command: htmlproofer src/public --allow-hash-href --check-html --empty-alt-ignore --disable-external
+      #- run:
+      #    name: "Test Website"
+      #    command: htmlproofer src/public --allow-hash-href --check-html --empty-alt-ignore --disable-external
       - persist_to_workspace:
           root: src
           paths:
             - public
   deploy:
     docker:
-      - image: hubci/gotham:0.10
+      - image: hubci/strawberry:0.21.0
     steps:
       - attach_workspace:
           at: src
