--- a/src/config.toml
+++ b/src/config.toml
@@ -1,127 +1,174 @@
 baseurl = "https://www.chayev.com/"
 title = "Michael Ibragimchayev"
-
 theme = "hugo-coder"
+languageCode = "en"
+defaultContentLanguage = "en"
+paginate = 20
+pygmentsStyle = "bw"
+pygmentsCodeFences = true
+pygmentsCodeFencesGuessSyntax = true
+enableEmoji = true
+# Enable Disqus comments
+# disqusShortname = "yourdiscussshortname"
 
 googleAnalytics = "UA-174282916-1"
 publishdir = "public"
 
-languagecode = "en"
-defaultcontentlanguage = "en"
-
-paginate = 20
-
-pygmentsstyle = "b2"
-pygmentscodefences = true
-pygmentscodefencesguesssyntax = true
-
-# disqusShortname = "yourdiscussshortname"
-
 [params]
-    author = "Michael Ibragimchayev"
-    description = "Michael Ibragimchayev's personal website"
-    keywords = "developer,personal,data,mobile"
-    info = "A product-driven customer leader with Fortune 500 SaaS deployment experience"
-    avatarurl = "images/avatar.jpg"
-    image = "images/avatar.jpg"
-    title = "Michael Ibragimchayev"
-    # gravatar = "michael@chayev.com"
-    # footercontent = "Thank you for visiting my page!"
+author = "Michael Ibragimchayev"
+# license = '<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA-4.0</a>'
+description = "Michael Ibragimchayev's personal website"
+keywords = "developer,personal,data,mobile"
+info = "A product-driven customer leader with Fortune 500 SaaS deployment experience"
+avatarurl = "images/avatar.jpg"
+#gravatar = "john.doe@example.com"
+dateFormat = "January 2, 2006"
+since = 2020
+# Git Commit in Footer, uncomment the line below to enable it
+# commit = "https://github.com/luizdepra/hugo-coder/tree/"
+# Right To Left, shift content direction for languagues such as Arabic
+rtl = false
+# Specify light/dark colorscheme
+# Supported values:
+# "auto" (use preference set by browser)
+# "dark" (dark background, light foreground)
+# "light" (light background, dark foreground) (default)
+colorScheme = "auto"
+# Hide the toggle button, along with the associated vertical divider
+hideColorSchemeToggle = false
+# Series see also post count
+maxSeeAlsoItems = 5
+# Custom CSS
+customCSS = ["css/custom.css"]
+# Custom SCSS, file path is relative to Hugo's asset folder (default: {your project root}/assets)
+customSCSS = []
 
-    dateformat = "January 2, 2006"
+# Custom JS
+customJS = []
 
-    hideFooter = false
-    hideCredits = true
-    hideCopyright = false
-    since = 2020
-    
-    rtl = false
-
-    # Specify light/dark colorscheme
-    # Supported values:
-    # "auto" (use preference set by browser)
-    # "dark" (dark background, light foreground)
-    # "light" (light background, dark foreground) (default)
-    colorScheme = "auto"
-
-    # Hide the toggle button, along with the associated vertical divider
-    hideColorSchemeToggle = false
-
-    # Series see also post count
-    maxSeeAlsoItems = 5
-
-    # Enable Twemoji
-    enableTwemoji = true
-
-    # Custom CSS
-    customCSS = ["css/custom.css"]
-
-    # Custom SCSS
-    customSCSS = []
-
-    # Custom JS
-    customJS = []
+# Custom remote JS files
+customRemoteJS = []
 
 # If you want to use fathom(https://usefathom.com) for analytics, add this section
 # [params.fathomAnalytics]
-    # siteID = "ABCDE"
-    # Default value is cdn.usefathom.com, overwrite this if you are self-hosting
-    # serverURL = "analytics.example.com"
+# siteID = "ABCDE"
+# serverURL = "analytics.example.com" # Default value is cdn.usefathom.com, overwrite this if you are self-hosting
+
+# If you want to use plausible(https://plausible.io) for analytics, add this section
+# [params.plausibleAnalytics]
+# domain = "example.com"
+# serverURL = "analytics.example.com" # Default value is plausible.io, overwrite this if you are self-hosting or using a custom domain
+# outboundLinksTracking = true
+# fileDownloadsTracking = true
+
+# If you want to use goatcounter(https://goatcounter.com) for analytics, add this section
+# [params.goatCounter]
+# code = "code"
+
+# If you want to use Cloudflare Web Analytics(https://cloudflare.com) for analytics, add this section
+# [params.cloudflare]
+# token = "token"
+
+# If you want to use Matomo(https://matomo.org) for analytics, add this section
+# [params.matomo]
+# siteID = "ABCDE" # Default value is "1", overwrite this if you are cloud-hosting
+# serverURL = "analytics.example.com" # For cloud-hosting, use provided URL, e.g. example.matomo.cloud
+
+# If you want to use Google Tag Manager(https://analytics.google.com/) for analytics, add this section
+# [params.googleTagManager]
+# id = "gid"
+
+# If you want to use Yandex Metrika(https://metrika.yandex.ru) for analytics, add this section
+# [params.yandexMetrika]
+# id = "gid"
+
+# If you want to use Application Insights(https://azure.com/) for analytics, add this section
+# [params.applicationInsights]
+# connectionString = "connectionString"
+
+# If you want to use microanalytics.io for analytics, add this section
+# [params.microAnalytics]
+# id = "ABCDE"
+# dnt = "false" # respect DNT tracker, "true" by default
+
+# If you want to implement a Content-Security-Policy, add this section
+# [params.csp]
+# childsrc = ["'self'"]
+# fontsrc = ["'self'", "https://fonts.gstatic.com", "https://cdn.jsdelivr.net/"]
+# formaction = ["'self'"]
+# framesrc = ["'self'", "https://www.youtube.com"]
+# imgsrc = ["'self'"]
+# objectsrc = ["'none'"]
+# stylesrc = [
+#   "'self'",
+#   "'unsafe-inline'",
+#   "https://fonts.googleapis.com/",
+#   "https://cdn.jsdelivr.net/",
+# ]
+# scriptsrc = [
+#   "'self'",
+#   "'unsafe-inline'",
+#   "https://www.google-analytics.com",
+#   "https://cdn.jsdelivr.net/",
+# ]
+# prefetchsrc = ["'self'"]
+# # connect-src directive – defines valid targets for to XMLHttpRequest (AJAX), WebSockets or EventSource
+# connectsrc = ["'self'", "https://www.google-analytics.com"]
 
 [taxonomies]
-  category = "categories"
-  series = "series"
-  tag = "tags"
+category = "categories"
+series = "series"
+tag = "tags"
+author = "authors"
 
-[[params.social]]    
-    name = "Github"
-    icon = "fa fa-github"
-    weight = 1
-    url = "https://github.com/chayev"
 [[params.social]]
-    name = "LinkedIn"
-    icon = "fa fa-linkedin"
-    weight = 2
-    url = "https://www.linkedin.com/in/chayev/"
+name = "Github"
+icon = "fa fa-2x fa-github"
+weight = 1
+url = "https://github.com/chayev"
+
 # [[params.social]]
-#     name = "Twitter"
-#     icon = "fab fa-twitter"
-#     weight = 3
-#     url = "https://twitter.com/chayev_talks"
+# name = "Twitter"
+# icon = "fa fa-2x fa-twitter"
+# weight = 2
+# url = "https://twitter.com/johndoe/"
+
 [[params.social]]
-    name = "Email"
-    icon = "fa fa-envelope"
-    weight = 4
-    url = "contact/"
+name = "LinkedIn"
+icon = "fa fa-2x fa-linkedin"
+weight = 3
+url = "https://www.linkedin.com/in/chayev/"
 
+[[params.social]]
+name = "Email"
+icon = "fa fa-2x fa-envelope"
+weight = 4
+url = "contact/"
 
-[languages]
-    [languages.en]
-        languagename = "English"
+[languages.en]
+languageName = ":uk:"
 
-        [languages.en.menu]
+[[languages.en.menu.main]]
+name = "Home"
+weight = 1
+url = ""
 
-            [[languages.en.menu.main]]
-            name = "Home"
-            weight = 1
-            url = ""
+[[languages.en.menu.main]]
+name = "About"
+weight = 2
+url = "about/"
 
-            [[languages.en.menu.main]]
-            name = "About"
-            weight = 2
-            url = "about/"
+# [[languages.en.menu.main]]
+# name = "Blog"
+# weight = 3
+# url = "posts/"
 
-            # [[languages.en.menu.main]]
-            # name = "Blog"
-            # weight = 3
-            # url = "posts/"
+[[languages.en.menu.main]]
+name = "Projects"
+weight = 4
+url = "projects/"
 
-            [[languages.en.menu.main]]
-            name = "Projects"
-            weight = 4
-            url = "projects/"
-
-            [[languages.en.menu.main]]
-            name = "Contact"
-            weight = 5
-            url = "contact/"
+[[languages.en.menu.main]]
+name = "Contact"
+weight = 5
+url = "contact/"
